--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -70,8 +70,8 @@
     
 <div class="pageheader">
         <hr>
-        <span align="center"><h4>My Cart</h4></span>
-        <p>Review your selected licenses and proceed to checkout.</p>
+        <span align="center"><h4>My Cart</h4>
+        <p>Review your selected licenses and proceed to checkout.</p></span>
         <hr>
     </div>
 <section class="top-section">
