--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -39,7 +39,7 @@
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
-            <a href="testimonials.html">MyLicenses</a>
+            <a href="testimonials.html">Testimonials</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
