--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -102,7 +102,15 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
-<div class="container2">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
+            Add Product
+        </button>
+    </div>
+    
+<!-- MAIN DATA GRID -->    
+<section class="top-section">
+    
     <h2 class="text-center mb-4">User Help - Trouble Ticket</h2>
 
     <form id="ticketForm">
@@ -199,9 +207,8 @@
 
         <button type="submit" class="btn btn-custom w-100">Submit Ticket</button>
     </form>
-</div>
 
-<div class="container2">
+</section>
 <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
