--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -102,6 +102,12 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
+
+        <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Customer Care & Communications</h4></span>
+        <hr>
+    </div>
     <div class="d-flex justify-content-between align-items-center mb-3">
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
             Add Product
@@ -111,8 +117,6 @@
 <!-- MAIN DATA GRID -->    
 <section class="top-section">
     
-    <h2 class="text-center mb-4">User Help - Trouble Ticket</h2>
-
     <form id="ticketForm">
 
         <div class="row">
