--- a/project/homepage/usernotices.html
+++ b/project/homepage/usernotices.html
@@ -106,9 +106,13 @@
 </nav>
 
 <body>
-
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>User Notices</h4></span>
+        <hr>
+    </div>
+       
 <section class="top-section">
-    <h2 class="text-center mb-4">User Notices</h2>
 
     <table class="table table-bordered table-striped" id="noticesTable">
         <thead>
