--- a/project/homepage/help.html
+++ b/project/homepage/help.html
@@ -63,6 +63,7 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 <nav>
+
     <ul class="menu">
         <li><a href="#products">Products</a></li>
 
@@ -100,11 +101,16 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
-    
-<div class="container2">
-    <h2 class="text-center mb-4">User Help - Trouble Ticket</h2>
 
-    <form id="ticketForm">
+
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Care Tickets</h4></span>
+        <hr>
+    </div>
+    
+<section class="top-section">
+       <form id="ticketForm">
 
         <div class="row">
             <div class="col-md-6 mb-3">
@@ -198,9 +204,9 @@
 
         <button type="submit" class="btn btn-custom w-100">Submit Ticket</button>
     </form>
-</div>
+</section>
 
-<div class="container2">
+
 <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
