--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -109,7 +109,14 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
-<section class="top-section">   
+
+   <div class="pageheader">
+     <hr>
+     <span align="center"><h4>Product Administrator</h4></span>
+      <hr>
+    </div>
+
+   <section class="top-section">   
 <!-- HERO SECTION -->
 <section class="hero" style="background-color: white;">
     <h2 style="text-align: center;">Welcome to Greenville Associates Enterprise Licensing</h2>
