--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -112,14 +112,14 @@
 
    <div class="pageheader">
      <hr>
-     <span align="center"><h4>Product Administrator</h4></span>
+     <span align="center"><h4>Welcome to Greenville Associates Enterprise Software Solutions</h4></span>
       <hr>
     </div>
 
    <section class="top-section">   
 <!-- HERO SECTION -->
-<section class="hero" style="background-color: white;">
-    <h2 style="text-align: center;">Welcome to Greenville Associates Enterprise Licensing</h2>
+<section class="hero" style="background-color: white; color: black;">
+    <h2 style="text-align: center;">Latest Product Releases</h2>
     <span>Your central hub for software licensing, product access, and enterprise resources.</span>
 </section>
 </section>
