--- a/project/homepage/contacts.html
+++ b/project/homepage/contacts.html
@@ -101,8 +101,14 @@
         <li><a href="#contact">Contact Sales</a></li>
     </ul>
 </nav>
+
+   <div class="pageheader">
+     <hr>
+     <span align="center"><h4>Welcome to Greenville Associates Enterprise Software Solutions</h4></span>
+      <hr>
+    </div>
     
-<div class="container2">
+<section class="top-section">
     <h2 class="text-center mb-4">Contact Submission Form</h2>
 
     <form id="contactForm">
@@ -153,7 +159,7 @@
 
         <button type="submit" class="btn btn-custom w-100">Submit</button>
     </form>
-</div>
+</section>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
