--- a/project/homepage/paynow2.html
+++ b/project/homepage/paynow2.html
@@ -44,7 +44,7 @@
   </div>
 <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
 
-  <div class="container2">
+  <section class="top-section">
     <h2>Choose a Credit Card</h2>
   
   <div id="no-card-message" class="mt-3 text-danger fw-bold"></div>
@@ -164,7 +164,7 @@
       </div>
     </form>
   </div>
-</div>
+</section>
 
 
 
@@ -518,8 +518,8 @@ async function fetchCartDetails(ids) {
 </script>
 
   <!-- Footer -->
-  <footer class="footer">
-    &copy; Cocky Consulting 2025. <br> All rights reserved.<br>
+  <footer>
+    &copy; Greenville Associates Consulting 2026. <br> All rights reserved.<br>
     <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span>
   </footer>
 </body>
