--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -110,20 +110,14 @@
         <hr>
     </div>
 
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
-            Add Product
-        </button>
-    </div>
-    
-<!-- MAIN DATA GRID -->    
-<section class="top-section">
-
         <!-- ACTION BAR -->
-        <div class="action-bar mb-3">
+        <div class="action-bar mb-6" style="max-width: 1575px; margin: 0 auto;">
             <button class="btn btn-green" id="editBtn">Edit Profile</button>
             <button class="btn btn-black" id="refreshBtn">Refresh</button>
         </div>
+    
+<!-- MAIN DATA GRID -->    
+<section class="top-section">
 
         <!-- PROFILE DISPLAY CARD -->
         <div class="card profile-card mb-4">
