--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -122,17 +122,24 @@
     </div>    
 <section class="top-section">
 
-    <table class="table table-striped table-hover" id="licenseTable">
-        <thead class="table-dark">
-            <tr>
-                <th data-col="LicenseTypeID">ID</th>
-                <th data-col="LicenseTypeName">Name</th>
-                <th data-col="Description">Description</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+   <div class="container-fluid mt-4">
+    <div class="row">
+        <div class="col-12">
+            <table id="licenseTable" class="table table-striped table-bordered table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th data-col="LicenseTypeID">ID</th>
+                        <th data-col="LicenseTypeName">License Type Name</th>
+                        <th data-col="Description">Description</th>
+                        <th style="width: 120px;">Actions</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 
 
 <!-- ADD LICENSE TYPE MODAL -->
@@ -307,7 +314,7 @@ function openUpdateModal(license) {
 async function updateLicenseType() {
     const form = document.querySelector("#updateForm");
     const data = Object.fromEntries(new FormData(form));
-    const id = data._id;
+    const id = data.LicenseTypeID; // FIXED
 
     await fetch(`${API}/${id}`, {
         method: "PUT",
@@ -321,5 +328,6 @@ async function updateLicenseType() {
 
 loadLicenseTypes();
 </script>
+
 </body>
 </html>
