--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -10,7 +10,8 @@
 <link rel="stylesheet" href="./css/greenville.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
+<script src="./js/bikes.js"></script>
+<script src="./js/cart.js"></script>
 <style>
 
 </style>
