--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -123,7 +123,9 @@
     </div>
         
 <section class="top-section">
+    <div class="containerstuff">
     <div id="licenses-container" class="row g-4"></div>
+    </div>
 </section>
 <!-- FOOTER COLUMNS -->
 <section class="welcome-columns">
@@ -220,7 +222,7 @@ $(document).ready(function () {
                         </div>
                     `;
 
-                    container2.append(card);
+                    containerstuff.append(card);
                 });
             }
 
