--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">    
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script>
 <link rel="stylesheet" href="./css/site.css"> 
@@ -468,6 +469,7 @@
 </div>
 </body>
 </html>
+
 
 
 
