--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">    
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script type="module" src="https://esm.run/@material/web/all.js"></script>
+<script type="module" src="https://esm.run/@material/web/button/text-button.js"></script>
 <link rel="stylesheet" href="./css/site.css"> 
 <link rel="stylesheet" href="./css/layout.css"> 
 <link rel="stylesheet" href="./css/greenville.css">  
@@ -469,6 +469,7 @@
 </div>
 </body>
 </html>
+
 
 
 
