--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -11,6 +11,17 @@
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+    md-text-button.icon-only { 
+        --md-text-button-container-height: 32px; 
+        --md-text-button-container-shape: 4px; 
+        padding: 0; min-width: 32px; 
+    } 
+    
+    md-text-button.icon-only .material-icons 
+    { 
+        font-size: 20px; 
+        line-height: 1; 
+    }
 </style>
 </head>
 <body>
@@ -469,6 +480,7 @@
 </div>
 </body>
 </html>
+
 
 
 
