--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -46,23 +46,23 @@
     </div>
 <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
 
-  <md-text-button href="index.html" aria-label="Home" title="Home">
+  <md-text-button class="icon-only" href="index.html" aria-label="Home" title="Home">
     <span class="material-icons" style="color:white;">home</span>
   </md-text-button>
 
-  <md-text-button href="userhelp.html" aria-label="Help" title="Help">
+  <md-text-button class="icon-only" href="userhelp.html" aria-label="Help" title="Help">
     <span class="material-icons" style="color:white;">help_outline</span>
   </md-text-button>
 
-  <md-text-button href="usernotices.html" aria-label="Notifications" title="Notifications">
+  <md-text-button class="icon-only" href="usernotices.html" aria-label="Notifications" title="Notifications">
     <span class="material-icons" style="color:white;">notifications</span>
   </md-text-button>
 
-  <md-text-button href="login.html" aria-label="Login" title="Login">
+  <md-text-button class="icon-only" href="login.html" aria-label="Login" title="Login">
     <span class="material-icons" style="color:white;">login</span>
   </md-text-button>
 
-  <md-text-button href="logout.html" aria-label="Logout" title="Logout">
+  <md-text-button class="icon-only" href="logout.html" aria-label="Logout" title="Logout">
     <span class="material-icons" style="color:white;">logout</span>
   </md-text-button>
 
@@ -480,6 +480,7 @@
 </div>
 </body>
 </html>
+
 
 
 
