--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -19,8 +19,9 @@
     
     md-text-button.icon-only .material-icons 
     { 
-        font-size: 20px; 
+        font-size: 15px; 
         line-height: 1; 
+        padding: 5px;
     }
 </style>
 </head>
@@ -66,14 +67,11 @@
     <span class="material-icons" style="color:white;">logout</span>
   </md-text-button>
 
-  <!-- New: User Profile -->
-  <md-text-button href="myprofile.html" aria-label="My Profile" title="My Profile">
-<!-- You can use 'account_circle' if you like that look better -->
+   <md-text-button class="icon-only" href="myprofile.html" aria-label="My Profile" title="My Profile">
     <span class="material-icons" style="color:white;">person</span>
   </md-text-button>
 
-  <!-- New: Cart Review -->
-  <md-text-button href="mycart.html" aria-label="My Cart" title="My Cart">
+   <md-text-button class="icon-only" href="mycart.html" aria-label="My Cart" title="My Cart">
     <span class="material-icons" style="color:white;">shopping_cart</span>
   </md-text-button>
 </div>
@@ -480,6 +478,7 @@
 </div>
 </body>
 </html>
+
 
 
 
