--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Three Fish Tanks with Bubbles</title>
+    <meta charset="UTF-8">
+    <title>USC242 HomePage</title>
+
+    <!-- Top menu bar -->
+    <link rel="stylesheet" href="./css/site.css">
+    <!-- Inner flex layout -->
+    <link rel="stylesheet" href="./css/layout.css">
+
   <style>
     .assign7 {
       max-width: 1200px;
@@ -78,6 +84,35 @@
       color: #222;
     }
   </style>
+</head>
+<body>
+    <div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="../../index.html">Home</a>
+            <a href="../../242index.html">242 Home</a>
+            <a href="../../about.html">AboutMe</a>
+            <a href="../../interests.html">MyInterests</a>
+            <a href="../../usc.html">USC</a>
+            <a href="../../portfoliopage.html">Portfolio</a>
+            <a href="../../vitae.html">Vitae</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="../../login.html">Login</a>
+        <a href="../../logout.html">Logout</a>
+    </div>
+</div>
+
+<!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
+
+<header>
+    <h1>Assignment9</h1>
+    <p>Introduction To Javascript</p>
+</header>
+
 </head>
 <body>
 
