--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -10,7 +10,7 @@
     <!-- Inner flex layout -->
     <link rel="stylesheet" href="./css/layout.css">
 
-  <style>
+<style>
     .assign7 {
       max-width: 1200px;
       margin: 0 auto;
@@ -25,20 +25,20 @@
     }
 
     .column {
-      flex: 1 1 300px;               /* responsive: min ~300px per column */
+      flex: 1 1 300px;
       max-width: 400px;
       text-align: center;
       border: 2px solid black;
       border-radius: 8px;
-      overflow: hidden;              /* keeps bubbles inside the tank area */
-      position: relative;            /* for absolute-positioned bubbles */
+      overflow: hidden;
+      position: relative;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
 
     .tank-wrapper {
       position: relative;
       width: 100%;
-      height: 300px;                 /* match your image height */
+      height: 300px;
       overflow: hidden;
       background: #0a1f44;           /* dark water fallback */
     }
@@ -50,31 +50,29 @@
       display: block;
     }
 
-    /* Bubble styling – contained within each tank */
     .bubble {
       position: absolute;
       bottom: -30px;
       border-radius: 50%;
-      background: rgba(255, 255, 255, 0.35);
-      box-shadow: 
-        0 0 12px rgba(200, 240, 255, 0.7),
-        inset 0 2px 6px rgba(255,255,255,0.5);
-      backdrop-filter: blur(1px);
       pointer-events: none;
       animation: rise linear infinite;
       z-index: 5;
+      box-shadow: 
+        0 0 12px rgba(255,255,255,0.5),
+        inset 0 2px 6px rgba(255,255,255,0.4);
+      backdrop-filter: blur(1px);
     }
 
     @keyframes rise {
       0% {
         transform: translateY(0) scale(0.6);
-        opacity: 0.3;
+        opacity: 0.35;
       }
       50% {
-        opacity: 0.9;
+        opacity: 0.85;
       }
       100% {
-        transform: translateY(-320px) scale(1.1);  /* rise above tank height */
+        transform: translateY(-320px) scale(1.1);
         opacity: 0;
       }
     }
