--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -40,7 +40,7 @@
       width: 100%;
       height: 300px;
       overflow: hidden;
-      background: #0a1f44;           /* dark water fallback */
+      background: #0a1f44;
     }
 
     .tank-wrapper img {
@@ -52,7 +52,6 @@
 
     .bubble {
       position: absolute;
-      bottom: -30px;
       border-radius: 50%;
       pointer-events: none;
       animation: rise linear infinite;
@@ -66,10 +65,10 @@
     @keyframes rise {
       0% {
         transform: translateY(0) scale(0.6);
-        opacity: 0.35;
+        opacity: 0.4;
       }
       50% {
-        opacity: 0.85;
+        opacity: 0.9;
       }
       100% {
         transform: translateY(-320px) scale(1.1);
