--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -145,11 +145,11 @@
 </section>
 
 <script>
-// Color sets for each tank
+// Colors per tank
 const bubbleColors = {
-  1: { bg: 'rgba(255, 182, 193, 0.55)', glow: 'rgba(255, 105, 180, 0.7)' },   // pink / hot pink glow
-  2: { bg: 'rgba(144, 238, 144, 0.55)', glow: 'rgba(50, 205, 50, 0.6)'   },   // light green / lime glow
-  3: { bg: 'rgba(173, 216, 230, 0.55)', glow: 'rgba(100, 149, 237, 0.7)' }    // light blue / cornflower glow
+  1: { bg: 'rgba(255, 182, 193, 0.55)', glow: 'rgba(255, 105, 180, 0.7)' },    // pink
+  2: { bg: 'rgba(144, 238, 144, 0.55)', glow: 'rgba(50, 205, 50, 0.6)'   },    // light green
+  3: { bg: 'rgba(173, 216, 230, 0.55)', glow: 'rgba(100, 149, 237, 0.7)' }     // light blue
 };
 
 function addBubblesToTank(tankElement, bubbleCount = 12) {
@@ -160,14 +160,16 @@ function addBubblesToTank(tankElement, bubbleCount = 12) {
     const bubble = document.createElement('div');
     bubble.classList.add('bubble');
 
-    const size = Math.random() * 20 + 8;        // 8–28 px
-    const left = Math.random() * 90 + 5;        // spread across width
-    const duration = Math.random() * 8 + 6;     // 6–14 seconds
-    const delay = Math.random() * 6;
+    const size = Math.random() * 20 + 8;           // 8–28px
+    // Constrain horizontally: 10px from left + 10px from right
+    const left = 10 + Math.random() * (100 - 20);  // 10% to 90%
+    const duration = Math.random() * 8 + 7;        // 7–15 seconds
+    const delay = Math.random() * 5;
 
     bubble.style.width = `${size}px`;
     bubble.style.height = `${size}px`;
     bubble.style.left = `${left}%`;
+    bubble.style.bottom = '-10px';                 // start 10px above bottom (partially visible)
     bubble.style.background = colors.bg;
     bubble.style.boxShadow = `0 0 12px ${colors.glow}, inset 0 2px 6px rgba(255,255,255,0.4)`;
     bubble.style.animationDuration = `${duration}s`;
@@ -175,7 +177,7 @@ function addBubblesToTank(tankElement, bubbleCount = 12) {
 
     tankElement.appendChild(bubble);
 
-    // Remove and respawn one bubble to keep it going forever
+    // Respawn one bubble when it disappears (keeps constant gentle movement)
     bubble.addEventListener('animationend', () => {
       bubble.remove();
       addBubblesToTank(tankElement, 1);
@@ -183,11 +185,11 @@ function addBubblesToTank(tankElement, bubbleCount = 12) {
   }
 }
 
-// Initialize bubbles when page loads
+// Start bubbles on page load
 document.addEventListener('DOMContentLoaded', () => {
   const tanks = document.querySelectorAll('.tank-wrapper');
   tanks.forEach(tank => {
-    addBubblesToTank(tank, 12);   // start with 12 bubbles per tank
+    addBubblesToTank(tank, 12);
   });
 });
 </script>
