--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/site.css">
     <!-- Inner flex layout -->
     <link rel="stylesheet" href="./css/layout.css">
-
+    <link rel="stylesheet" href="./css/fishtank.css">
 <style>
     .assign7 {
       max-width: 1200px;
