--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -10,6 +10,7 @@
     <!-- Inner flex layout -->
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/fishtank.css">
+    <script src="./js/fishtank.js"></script>
 <style>
    
   </style>
