--- a/assignments/9-loops/index.html
+++ b/assignments/9-loops/index.html
@@ -45,15 +45,15 @@
 <BR><BR>
 <div class="row">
   <div class="column" style="background-color:#aaa; border: 2px solid black;" onclick="callupdategeometry();">
-    <h2>Tank1</h2>
+    <h2>Tank1(Pink)</h2>
     <p id="outputtarget"><img id="tank1" src="./images/fishtank.jpeg" width="300px" height="300px"></p>
     </div>
   <div class="column" style="background-color:#bbb; border: 2px solid black;">
-    <h2>Tank2</h2>
+    <h2>Tank2(Green)</h2>
     <p><img id="tank2" src="./images/fishtank.jpeg" width="300px" height="300px"></p>
   </div>
   <div class="column" style="background-color:#ccc; border: 2px solid black;" onclick="callimageframer();">
-    <h2>Tank3</h2>
+    <h2>Tank3(Blue)</h2>
     <p><img id="tank3" src="./images/fishtank.jpeg" width="300px" height="300px"></p>
   </div>
 </div>
