--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -52,7 +52,7 @@
   <div class="row">
     <!-- Tank 1 -->
     <div class="column" style="background-color:#aaa;" onclick="callupdategeometry();">
-      <h2>Tank 1</h2>
+      <h2>Tank 1(Pink)</h2>
       <div class="tank-wrapper">
         <img id="tank1" src="./images/fishtank.jpeg" alt="Tank 1">
         <!-- Bubbles will be added here via JS -->
@@ -61,7 +61,7 @@
 
     <!-- Tank 2 -->
     <div class="column" style="background-color:#bbb;">
-      <h2>Tank 2</h2>
+      <h2>Tank 2(Green)</h2>
       <div class="tank-wrapper">
         <img id="tank2" src="./images/fishtank.jpeg" alt="Tank 2">
       </div>
@@ -69,7 +69,7 @@
 
     <!-- Tank 3 -->
     <div class="column" style="background-color:#ccc;" onclick="callimageframer();">
-      <h2>Tank 3</h2>
+      <h2>Tank 3(Blue)</h2>
       <div class="tank-wrapper">
         <img id="tank3" src="./images/fishtank.jpeg" alt="Tank 3">
       </div>
