--- a/project/homepage/book555.html
+++ b/project/homepage/book555.html
@@ -34,7 +34,7 @@
             <a href="testimonials.html">MyLicenses</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
         </div>
        <div class="logo">&nbsp;&nbsp;MyLinkv25 - Review Parks</div>
       </div>
