--- a/project/homepage/cartdetail.html
+++ b/project/homepage/cartdetail.html
@@ -44,7 +44,7 @@
             <a href="mylicenses.html">MyLicenses</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
             </div>
       </div> 
     <div class="logo">&nbsp&nbsp<H5>MyLinkv25 - Review Parks</H5></div>
