--- a/project/homepage/reviews5.html
+++ b/project/homepage/reviews5.html
@@ -37,7 +37,7 @@
             <a href="mylicenses.html">MyLicenses</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
         </div>
       </div>
       <div class="logo">&nbsp;&nbsp;&nbsp;<h5 class="mb-0">MyLinkv25 - ParkReviews</h5></div>
