--- a/project/homepage/cartmaster.html
+++ b/project/homepage/cartmaster.html
@@ -55,7 +55,7 @@ font-size: 12pt;
             <a href="mylicenses.html">MyLicenses</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
              </div>
     </div> 
       <div class="logo">&nbsp&nbsp<H5>MyLinkv25 - Review Parks</H5></div>
