--- a/project/homepage/help.html
+++ b/project/homepage/help.html
@@ -105,7 +105,7 @@
             </ul>
         </li>
 
-        <li><a href="#contact">Contact Sales</a></li>
+        <li><a href="contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
 
