--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -33,7 +33,7 @@
             <a href="mylicenses.html">MyLicenses</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
         </div>
     </div>
   <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
