--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -32,7 +32,7 @@
             <a href="mylicenses.html">MyLicenses</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
         </div>
     </div>
 
