--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -30,7 +30,7 @@
             <a href="testimonials.html">Testimonials</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
         </div>
     </div>
 <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
@@ -112,7 +112,7 @@
             </ul>
         </li>
 
-        <li><a href="#contact">Contact Sales</a></li>
+        <li><a href="contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
 
