--- a/project/homepage/reviewpayment5.html
+++ b/project/homepage/reviewpayment5.html
@@ -84,7 +84,7 @@ width: 400px;
             <a href="mylicenses.html">MyLicenses</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
             </div>
     </div> 
       <div class="logo">&nbsp&nbsp&nbsp<H5>MyLinkv25</H5></div>
