--- a/project/homepage/template.html
+++ b/project/homepage/template.html
@@ -28,7 +28,7 @@
             <a href="mylicenses.html">MyLicenses</a>
             <a href="mycart.html">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
         </div>
     </div>
 
