--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -44,7 +44,7 @@
             <a href="testimonials.html">Testimonials</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
         </div>
     </div>
 
@@ -123,7 +123,7 @@
           </ul>
       </li>
 
-      <li><a href="#contact">Contact Sales</a></li>
+      <li><a href="contacts.html">Contact Sales</a></li>
   </ul>
 </nav>
 
