--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -29,7 +29,7 @@
             <a href="mylicenses.html">MyLicenses</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="Help.html">Help</a>
+            <a href="help.html">Help</a>
         </div>
     </div>
 
@@ -106,7 +106,7 @@
             </ul>
         </li>
 
-        <li><a href="#contact">Contact Sales</a></li>
+        <li><a href="contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
 
