--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
 		<div class="task-item">
             <h4>Assignment9</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/9-loops/index.html"><img src="https://jssg33.github.io/usc242/assignments/9-loops/images/fishtank.jpeg" alt="Assignment9"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/9-loops/fishtank.html"><img src="https://jssg33.github.io/usc242/assignments/9-loops/images/fishtank.jpeg" alt="Assignment9"></a>
             <h5>Javascript Loops</h5>
             <h6>Simple Javascript Loop Excercises</h6>
         </div>
@@ -144,6 +144,12 @@
             <a href="https://jssg33.github.io/usc242/assignments/11-javascript-classes/index.html"><img src="./images/TBD.png" alt="Assignment11"></a>
             <h5>Javascript Classes</h5>
             <h6>Simple Javascript Class Exercises</h6>
+        </div>
+	<div class="task-item">
+            <h4>Assignment12</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/9-loops/lab8v2.html"><img src="./images/lab8a.png" alt="Assignment12"></a>
+            <h5>LAB8A CSCE102</h5>
+            <h6>Legacy Annimation Sequence</h6>
         </div>
     </div>
 </section>
