--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <html lang="en">
+<!--
+	Assignment 9
+	Images Rendered From Microsoft Designer
+	Annimation Sequences From CSCE102
+	Menus from Assignment 8
+	Mobile Layout from Portias FlexBox Assignment
+	Site.css has various CSS from W3 schools, and legacy environments which has been customized over2+ years.
+-->
+
 <head>
     <meta charset="UTF-8">
     <title>USC242 HomePage</title>
-
-    <!-- Top menu bar -->
     <link rel="stylesheet" href="./css/site.css">
-    <!-- Inner flex layout -->
-    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/a8styles.css">
+    <link rel="stylesheet" href="./css/layout.css"> 
     <link rel="stylesheet" href="./css/fishtank.css">
     <script src="./js/fishtank.js"></script>
+    <script src="./js/a8scripts.js"></script>
 <style>
    
   </style>
 </head>
 <body>
+
+
+  <div id="topnavbar">
+    <div id="mobilemenu"> 
+       <div id="mobilemenu-header"> <span class="arrow">▼&nbsp;&nbsp;</span> <span id="SiteMenu">Menu</span> </div> 
+       <ul id="hiding"> <li id="mobile-ex1">Exercise 1</li> <li id="mobile-ex2">Exercise 2</li> </ul> 
+    </div>
+  </div>
+
+<-- OldMenu Moving to Hidden Assignment 8 Menus-- Mobile Only
     <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -28,7 +46,7 @@
             <a href="../../portfoliopage.html">Portfolio</a>
             <a href="../../vitae.html">Vitae</a>
         </div>
-    </div>
+    </div>-->
 
     <div class="right-links">
         <a href="../../login.html">Login</a>
