--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-
+<div class="pagecontainer">
 
   <div id="topnavbar">
     <div id="mobilemenu"> 
@@ -33,27 +33,6 @@
     </div>
   </div>
 
-<-- OldMenu Moving to Hidden Assignment 8 Menus-- Mobile Only
-    <div class="topnav">
-    <div class="dropdown">
-        <button class="dropbtn">Menu ▼</button>
-        <div class="dropdown-content">
-            <a href="../../index.html">Home</a>
-            <a href="../../242index.html">242 Home</a>
-            <a href="../../about.html">AboutMe</a>
-            <a href="../../interests.html">MyInterests</a>
-            <a href="../../usc.html">USC</a>
-            <a href="../../portfoliopage.html">Portfolio</a>
-            <a href="../../vitae.html">Vitae</a>
-        </div>
-    </div>-->
-
-    <div class="right-links">
-        <a href="../../login.html">Login</a>
-        <a href="../../logout.html">Logout</a>
-    </div>
-</div>
-
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
 
 <header>
@@ -61,10 +40,7 @@
     <p>Loop Bubble Builds</p>
 </header>
 
-</head>
-<body>
-
-<section class="assign7">
+<section class="assign9">
   <br><br>
 
   <div class="row">
@@ -98,6 +74,9 @@
 <script>
 
 </script>
-
+<footer class="footer">
+  &copy;2026 - Cocky Consulting, Inc. Assignment 8. All Rights Reserved
+</footer>
+</div>
 </body>
 </html>
