Adding Old Assignment Code

--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -29,7 +29,10 @@
   <div id="topnavbar">
     <div id="mobilemenu"> 
        <div id="mobilemenu-header"> <span class="arrow">▼&nbsp;&nbsp;</span> <span id="SiteMenu">Menu</span> </div> 
-       <ul id="hiding"> <li id="mobile-ex1">Exercise 1</li> <li id="mobile-ex2">Exercise 2</li> </ul> 
+       <ul id="hiding"> <li id="legacy"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></li></ul> 
+    </div>
+    <div id="navright" style="float: right;">
+      <a href="../../index.html">Site Home</a>
     </div>
   </div>
 
@@ -40,7 +43,7 @@
     <p>Loop Bubble Builds</p>
 </header>
 
-<section class="assign9">
+<section class="assign7">
   <br><br>
 
   <div class="row">
@@ -71,10 +74,7 @@
   </div>
 </section>
 
-<script>
-
-</script>
-<footer class="footer">
+<footer>
   &copy;2026 - Cocky Consulting, Inc. Assignment 8. All Rights Reserved
 </footer>
 </div>
