Menu Updates Styling.

--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -29,9 +29,9 @@
   <div id="topnavbar">
     <div id="mobilemenu"> 
        <div id="mobilemenu-header"> <span class="arrow">▼&nbsp;&nbsp;</span> <span id="SiteMenu">Menu</span> </div> 
-       <ul id="hiding"> <li id="legacy"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></li></ul> 
+       <ul id="hiding"><li id="mobile-ex1"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></li></ul> 
     </div>
-    <div id="navright" style="float: right;">
+    <div id="navright" style="float: right; vertical-align: middle;">
       <a href="../../index.html">Site Home</a>
     </div>
   </div>
@@ -43,7 +43,7 @@
     <p>Loop Bubble Builds</p>
 </header>
 
-<section class="assign7">
+<section class="assign9">
   <br><br>
 
   <div class="row">
@@ -75,7 +75,7 @@
 </section>
 
 <footer>
-  &copy;2026 - Cocky Consulting, Inc. Assignment 8. All Rights Reserved
+  &copy;2026 - Cocky Consulting, Inc. Assignment 9. All Rights Reserved
 </footer>
 </div>
 </body>
