--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -28,12 +28,8 @@
 
   <div id="topnavbar">
     <div id="mobilemenu"> 
-       <div id="mobilemenu-header"> <span class="arrow">▼&nbsp;&nbsp;</span> <span id="SiteMenu">Menu</span> </div> 
-       <ul id="hiding"><li id="mobile-ex1"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></li></ul> 
-    </div>
-    <div id="navright" style="float: right; vertical-align: middle;">
-      <a href="../../index.html">Site Home</a>
-    </div>
+       <div id="mobilemenu-header"> <span class="arrow">▼&nbsp;&nbsp;</span> <span id="SiteMenu"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span> </div> 
+      <span id="navright" style="float: right; vertical-align: middle; line-height: 1.5;"><a href="../../index.html"><H4>Site Home</H4></a></span>
   </div>
 
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
