--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -14,11 +14,10 @@
     <meta charset="UTF-8">
     <title>USC242 HomePage</title>
     <link rel="stylesheet" href="./css/site.css">
-    <link rel="stylesheet" href="./css/a8styles.css">
+    <link rel="stylesheet" href="./css/a9styles.css">
     <link rel="stylesheet" href="./css/layout.css"> 
     <link rel="stylesheet" href="./css/fishtank.css">
     <script src="./js/fishtank.js"></script>
-    <script src="./js/a8scripts.js"></script>
 <style>
    
   </style>
@@ -28,8 +27,9 @@
 
   <div id="topnavbar">
     <div id="mobilemenu"> 
-       <div id="mobilemenu-header"> <span class="arrow">▼&nbsp;&nbsp;</span> <span id="SiteMenu"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span> </div> 
+       <div id="mobilemenu-header"><span id="SiteMenu"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span> </div> 
       <span id="navright" style="float: right; vertical-align: middle; line-height: 1.5;"><a href="../../index.html"><H4>Site Home</H4></a></span>
+  </div>
   </div>
 
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
