--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -27,9 +27,9 @@
 
   <div id="topnavbar">
     <div id="mobilemenu"> 
-       <div id="mobilemenu-header"><span id="SiteMenu"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span> </div> 
-      <span id="navright" style="float: right; vertical-align: middle; line-height: 1.5;"><a href="../../index.html"><H4>Site Home</H4></a></span>
-  </div>
+       <span id="mobilemenu-header"><span id="SiteMenu"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span>
+    </div>
+   <div id="navright" style="float: right; vertical-align: middle; line-height: 1.5;"><a href="../../index.html"><H4>Site Home</H4></a></div>
   </div>
 
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
