--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -29,7 +29,7 @@
     <div id="mobilemenu"> 
        <span id="mobilemenu-header"><span id="SiteMenu"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span>
     </div>
-   <div id="navright" style="float: right; vertical-align: middle; line-height: 1.5;"><a href="../../index.html"><H4>Site Home</H4></a></div>
+   <div id="navright" style="float: right; vertical-align: top;"><a href="../../index.html"><H4>Site Home</H4></a></div>
   </div>
 
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
