--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -28,8 +28,8 @@
   <div id="topnavbar">
     <div id="mobilemenu"> 
        <span id="mobilemenu-header"><span id="SiteMenu"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span>
-    </div>
-   <div id="navright" style="float: right; vertical-align: top;"><a href="../../index.html"><H4>Site Home</H4></a></div>
+       <span id="navright" style="float: right; vertical-align: top; font-size: 11pt;"><a href="../../index.html">Site Home</a></span>
+      </div>
   </div>
 
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
