--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -27,8 +27,8 @@
 
   <div id="topnavbar">
     <div id="mobilemenu"> 
-       <span id="mobilemenu-header"><span id="SiteMenu"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span>
-       <span id="navright" style="float: right; vertical-align: top; font-size: 11pt;"><a href="../../index.html">Site Home</a></span>
+       <div id="mobilemenu-header"><span id="SiteMenu" style="font-size: 11pt;"><a href="lab8v2.html" target="_blank">LegacyAnimation</a></span>
+       <span id="navright" style="float: right; vertical-align: top; font-size: 11pt;"><a href="../../index.html">Site Home</a></span></div>
       </div>
   </div>
 
